app.css
/* Be consistent with TextBox */
.Select-control{
  border-radius: 0px !important;
}
.Select{
  margin-top: 5px;
  margin-bottom: 5px;
}

.alteryx-toggle-switch-outer {
  position: absolute !important;
  right: 4px;
}

#header{
  margin-bottom: 20px;
}

.tabs {
/**
 * Setting display to flex makes this container lay
 * out its children using flexbox, the exact same
 * as in the above "Stepper input" example.
 */
  display: flex;

  /* border-bottom: 1px solid #D7DBDD; */
}

.tab {
  cursor: pointer;
  padding-left: 25px; 
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 25px;
  /* color: #16A2D7; */
  color: #000000;
  font-size: 12px;
  /* border-bottom: 2px solid transparent; */
  background: #DBDBDB;
}
.tab:hover {
  background: #D8D8D8;
}

.tab.is-tab-selected {
  /* border-bottom-color: #4EBBE4; */
  background: #1691c6;
  color: #ffffff;
  font: "Segoe UI Semibold";
  font-size: 12px;
}

#intro-div{
  position: fixed;
  bottom: 5px;
  display: hidden;
}

#switch-to-customize{
  position: absolute;
  right: 8px;
  margin-top: 5px;
}
#switch-to-home{
  margin-left: -1px;
  margin-top: 10px;
}

#div-omit-constant {
  margin-bottom: 10px;
}
#xvars label {
  margin-bottom: 5px;
}

